--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -17,6 +17,11 @@ jobs:
         python-version: '3.11'
     
     - run: pip install -r requirements.txt
+    - name: Fetch SkyRouter Data
+  env:
+    SKYROUTER_USER: ${{ secrets.SKYROUTER_USER }}
+    SKYROUTER_PASS: ${{ secrets.SKYROUTER_PASS }}
+  run: python scripts/skyrouter_api_fetcher.py
     
     - name: Generate dashboard
       run: |
