--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -19,8 +19,8 @@ jobs:
     - run: pip install -r requirements.txt
     - name: Fetch SkyRouter Data
   env:
-    SKYROUTER_USER: ${{ secrets.SKYROUTER_USER }}
-    SKYROUTER_PASS: ${{ secrets.SKYROUTER_PASS }}
+    SKYROUTER_USERNAME: ${{ secrets.SKYROUTER_USER }}
+    SKYROUTER_PASSWORD: ${{ secrets.SKYROUTER_PASS }}
   run: python scripts/skyrouter_api_fetcher.py
     
     - name: Generate dashboard
