--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -43,11 +43,9 @@ jobs:
           git config user.email "actions@github.com"
           git config user.name "GitHub Actions"
           git add public/index.html data/*.json || true
-          if ! git diff --staged --quiet; then
-            git pull --rebase origin main
-            git commit -m "Update dashboard $(date -u)"
-            git push origin main
-          else
-            echo "No changes to commit."
-          fi
-          git diff --staged --quiet || (git commit -m "Update dashboard $(date -u)" && git push)
+          git commit -m "Update dashboard $(date -u)' || echo "No changes"
+
+          # sync with remote safely
+          git pull --rebase origin main
+
+          git push
