--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -42,10 +42,11 @@ jobs:
         run: |
           git config user.email "actions@github.com"
           git config user.name "GitHub Actions"
+
           git add public/index.html data/*.json || true
-          git commit -m "Update dashboard $(date -u)' || echo "No changes"
 
-          # sync with remote safely
+          git commit -m "Update dashboard $(date -u)" || echo "No changes"
+
           git pull --rebase origin main
-
           git push
+
